build: Add per-java version run configurations and more colourful logging
(now providing colours in IntelliJ!)